--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -3,7 +3,7 @@ name: PyInstaller Build and Release
 on:
   push:
     tags:
-      - "V*" # Menjalankan saat push tag seperti v1.0.0
+      - "V*"
   workflow_dispatch:
 
 jobs:
@@ -35,17 +35,23 @@ jobs:
         shell: bash
         run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
 
-      - name: 5. Set up UPX (used during build)
+      # ✅ UPX setup: Windows & Linux via crazy-max
+      - name: 5a. Setup UPX for Windows/Linux
+        if: matrix.os != 'macos-latest'
         uses: crazy-max/ghaction-upx@v3
         with:
           version: latest
+
+      # ✅ UPX setup: macOS via brew
+      - name: 5b. Install UPX on macOS
+        if: matrix.os == 'macos-latest'
+        run: brew install upx
 
       - name: 6. Generate .spec file
         shell: bash
         run: |
           cat << 'EOF' > main.spec
           # -*- mode: python ; coding: utf-8 -*-
-
           a = Analysis(
               ['main.py'],
               pathex=[],
@@ -144,8 +150,8 @@ jobs:
             🎉 New release of **File Content Search Pro**
             
             ✅ Built with PyInstaller  
-            ✅ Optimized using UPX  
-            ✅ Available for Windows, macOS, and Linux
+            ✅ UPX compression enabled for all OS  
+            ✅ Windows, macOS, and Linux supported
             
-            Download the appropriate version for your OS below.
+            Download the appropriate version below.
           files: artifacts/*/*
