--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -3,7 +3,7 @@ name: PyInstaller Build and Release
 on:
   push:
     tags:
-      - "V*"
+      - "V*"  # Jalan hanya saat push tag seperti v1.2.0
   workflow_dispatch:
 
 jobs:
@@ -31,80 +31,31 @@ jobs:
           pip install pyinstaller scikit-learn pymupdf
 
       - name: 4. Extract version from tag
-        id: get_version
         shell: bash
         run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
 
-      # ✅ UPX setup: Windows & Linux via crazy-max
+      # ✅ UPX setup for Windows/Linux
       - name: 5a. Setup UPX for Windows/Linux
         if: matrix.os != 'macos-latest'
         uses: crazy-max/ghaction-upx@v3
         with:
           version: latest
 
-      # ✅ UPX setup: macOS via brew
+      # ✅ UPX setup for macOS
       - name: 5b. Install UPX on macOS
         if: matrix.os == 'macos-latest'
         run: brew install upx
 
-      - name: 6. Generate .spec file
-        shell: bash
+      - name: 6. Build executable with PyInstaller using UPX
         run: |
-          cat << 'EOF' > main.spec
-          # -*- mode: python ; coding: utf-8 -*-
-          a = Analysis(
-              ['main.py'],
-              pathex=[],
-              binaries=[],
-              datas=[
-                  ('app', 'app'),
-                  ('assets', 'assets')
-              ],
-              hiddenimports=[
-                  'pandas._libs.tslibs.base',
-                  'pandas._libs.tslibs.np_datetime',
-                  'pandas._libs.tslibs.timedeltas',
-                  'matplotlib.backends.backend_tkagg',
-                  'sklearn.utils._cython_blas',
-                  'PIL._tkinter_finder',
-                  'pymupdf.core'
-              ],
-              hookspath=[],
-              hooksconfig={},
-              runtime_hooks=[],
-              excludes=['pytest', 'doctest', 'unittest', 'PyQt5', 'PyQt6', 'wx'],
-              noarchive=False,
-          )
-          pyz = PYZ(a.pure, a.zipped_data, cipher=None)
+          pyinstaller --noconfirm --clean --onefile --windowed \
+            --name FileSearchPro \
+            --icon=assets/search_icon.ico \
+            --upx-dir=/usr/local/bin \
+            main.py
 
-          exe = EXE(
-              pyz,
-              a.scripts,
-              [],
-              exclude_binaries=True,
-              name='FileSearchPro',
-              debug=False,
-              bootloader_ignore_signals=False,
-              strip=False,
-              upx=True,
-              runtime_tmpdir=None,
-              console=False,
-              icon='assets/search_icon.ico',
-          )
-
-          coll = COLLECT(
-              exe,
-              a.binaries,
-              a.zipfiles,
-              a.datas,
-              strip=False,
-              upx=True,
-              name='FileSearchPro'
-          )
-          EOF
-
-      - name: 7. Build executable with PyInstaller using UPX
-        run: pyinstaller --noconfirm --clean --upx-dir=/usr/local/bin main.spec
+      - name: 7. Debug dist folder (optional)
+        run: ls -lh dist/
 
       - name: 8. Rename output file
         shell: bash
@@ -148,10 +99,10 @@ jobs:
           name: Release ${{ github.ref_name }}
           body: |
             🎉 New release of **File Content Search Pro**
-            
-            ✅ Built with PyInstaller  
+
+            ✅ Built using PyInstaller  
             ✅ UPX compression enabled for all OS  
-            ✅ Windows, macOS, and Linux supported
-            
-            Download the appropriate version below.
+            ✅ Includes support for Windows, macOS, and Linux
+
+            Download the appropriate version for your OS below.
           files: artifacts/*/*
