--- a/.github/workflows/pyinstaller-build.yml
+++ b/.github/workflows/pyinstaller-build.yml
@@ -56,6 +56,7 @@ jobs:
             main.py
 
       - name: 7. Debug dist folder (optional)
+        shell: bash
         run: ls -lh dist/
 
       - name: 8. Rename output file
